Fix intro group pic from stretching on wider monitors

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    max-width: 654px;
 }
 
 /* unvisited link */
